# aap-bridge

./: .dockerignore  .env.example  .gitignore  404.html  APPLICATIONS-SETTINGS-IMPLEMENTATION.md  APPLICATIONS-SETTINGS-PROPOSAL.md  CHANGELOG.md  CREDENTIALS-TO-CREATE.md  CUSTOMER-TESTING-REPORT.md  Containerfile  Containerfile.dev  Containerfile.ui  FINAL-TEST-VALIDATION.md  FINAL-VALIDATION-TEST.md  GETTING-STARTED.md  MERGE-SUMMARY.md  MIGRATION-GUIDE.md  Makefile  README-IMPROVEMENT-RECOMMENDATIONS.md  README.md  SCRIPT-IMPROVEMENT-SUMMARY.md  SECURITY.md  TESTING-CREDENTIAL-MIGRATION.md  USER-GUIDE.md  check-all-resources.md  compose.yml  create_comprehensive_test_data.py  index.html  migrate-complete.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  test_data_creation_results.json
config/: config.yaml  ignored_endpoints.yaml
containers/: Containerfile  README.md
deploy/: nginx.conf
developer-guide/adding-resource-types/: index.html
developer-guide/architecture/: index.html
developer-guide/contributing/: index.html
developer-guide/testing/: index.html
docs/: index.md
docs/developer-guide/: architecture.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reference/: awx-migration.md  changelog.md  compatibility-matrix.md  support-matrix.md
docs/user-guide/: cli-reference.md  filtering-and-skipping.md  migration-workflow.md  troubleshooting.md  web-ui.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/awx-migration/: index.html
reference/changelog/: index.html
reference/compatibility-matrix/: index.html
reference/support-matrix/: index.html
reports/: LIVE-MIGRATION-FAILURE-ANALYSIS.md  LIVE-MIGRATION-SUCCESS-REPORT.md  LIVE-MIGRATION-TEST-STATUS.md  live-test-credential-comparison.md
scripts/: create_20_test_credentials.py  create_test_credentials_in_source.py  generate_direct_api_playbook_v2.py  recreate_credentials.sh
search/: search_index.json
src/aap_migration/: config.py  resources.py
src/aap_migration/api/: app.py  db_schema.py  dependencies.py  models.py  schemas.py  websocket.py
src/aap_migration/cli/: context.py  decorators.py  main.py  menu.py  utils.py
src/aap_migration/client/: aap_source_client.py  aap_target_client.py  api_layout.py  base_client.py  bulk_operations.py
src/aap_migration/migration/: classic_rbac_conversion.py  coordinator.py  database.py  exporter.py  importer.py  inventory_source_sync.py  organization_scope.py  parallel_exporter.py  parallel_transformer.py  state.py  team_role_grants.py  transformer.py
src/aap_migration/prep/: endpoint_discovery.py  workflow.py
src/aap_migration/reporting/: live_progress.py
src/aap_migration/utils/: directories.py  inventory_fk.py  logging.py
tests/integration/: Containerfile.builder  ansible.cfg  requirements.yml
tests/integration/containerfiles/: Containerfile.ubi8-init  Containerfile.ubi9-init
tests/integration/playbooks/: build-base-images.yml  build-instance.yml  commit-golden.yml  destroy-all.yml  destroy-pair.yml  generate-bridge-config.yml  install-aap.yml  pull-image.yml  push-image.yml  reset-instance.yml  reset-pair.yml  run-pair.yml  status.yml
tests/integration/scripts/: populate_test_data.py
tests/integration/versions/: matrix.yml
tests/unit/: test_api_layout.py  test_api_schemas.py  test_classic_rbac_conversion.py  test_cli_workflows.py  test_config.py  test_config_path_resolution.py  test_confirm_overwrite_directory.py  test_connection_client.py  test_connection_layout.py  test_connection_service.py  test_context.py  test_controller_org_resolve.py  test_directories.py  test_export_run_boundaries.py  test_importer.py  test_instance_group_export.py  test_inventory_fk.py  test_inventory_source_sync.py  test_job_seq_id.py  test_job_service.py  test_logging.py  test_organization_scope.py  test_patch_projects.py  test_phase2_ordering.py  test_project_sync.py  test_project_sync_wait.py  test_rbac_import.py  test_role_assignment_resolve.py  test_role_definition_export.py  test_transform_seed.py  test_version_compatibility.py
user-guide/cli-reference/: index.html
user-guide/filtering-and-skipping/: index.html
user-guide/migration-workflow/: index.html
user-guide/troubleshooting/: index.html
user-guide/web-ui/: index.html
web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx
web/src/api/: client.ts
web/src/components/: Ansi.css  Ansi.tsx  ConnectionForm.tsx  LogViewer.css  LogViewer.tsx  MigrationPreview.tsx  MigrationProgressView.css  MigrationProgressView.tsx  ResourceTable.tsx
(+64 files in other folders)
